tdf#166173: sw: always export enforcement attribute of documentProtection

otherwise: (in word/settings.xml)
- if a docx document has w:enforcement="0", LO will not
import it. Hence, LO will not export it, too.
- this will cause a lack of enforcement attr. - which
will make the docx "protected" after export from LO - in MSO Word.

Therefore, we have to import enforcement attr. even if it's
value is "0".

Change-Id: I30cf3cd8725151ea5bd9d4e484757e36602707e5
Signed-off-by: Bayram Çiçek <bayram.cicek@collabora.com>
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/184042
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolan.mcnamara@collabora.com>
Tested-by: Caolán McNamara <caolan.mcnamara@collabora.com>
(cherry picked from commit 29c7e73d132154ef7e83b15f6ff39938fb927fe5)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/184169
Tested-by: Jenkins CollaboraOffice <jenkinscollaboraoffice@gmail.com>